--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ allprojects {
     apply plugin: 'idea'
 
     group = 'be.isach'
-    version = '2.5.8-TAYLORS-BREW-W'
+    version = '2.5.8-TAYLORS-BREW-M'
 
     compileJava.options.encoding = 'UTF-8'
 
@@ -52,7 +52,7 @@ def supportfor113 = [':core', ':v1_13_R1', ':v1_13_R2']
 def supportfor114 = [':core', ':v1_14_R1']
 def supportfor115 = [':core', ':v1_15_R1']
 def supportfor116 = [':core', ':v1_16_R1']
-def fullSupport = [':core', ':v1_8_R1', ':v1_8_R2', ':v1_8_R3', ':v1_9_R1', ':v1_9_R2', 'v1_10_R1', ':v1_11_R1', ':v1_12_R1', ':v1_13_R1', ':v1_13_R2', ':v1_14_R1', 'v1_15_R1', 'v1_16_R1']
+def fullSupport = [':core', ':v1_8_R1', ':v1_8_R2', ':v1_8_R3', ':v1_9_R1', ':v1_9_R2', 'v1_10_R1', ':v1_11_R1', ':v1_12_R1', ':v1_13_R1', ':v1_13_R2', ':v1_14_R1', 'v1_15_R1', 'v1_16_R1', 'v1_16_R2']
 
 task fullJar(type: Jar, dependsOn: fullSupport.collect { it + ":compileJava" }) {
     baseName = 'UltraCosmetics'
