--- a/v1_16_R2/build.gradle
+++ b/v1_16_R2/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.16.2-R0.1-SNAPSHOT'
+    compileOnly 'org.bukkit:craftbukkit:1.16.2-R0.1-SNAPSHOT'
     compile project(':core')
 }
