--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ allprojects {
     apply plugin: 'idea'
 
     group = 'be.isach'
-    version = '2.5.10-RELEASE'
+    version = '2.5.10-UltraCosmetics-Taylors-Brew-LP'
 
     compileJava.options.encoding = 'UTF-8'
 
@@ -37,7 +37,7 @@ allprojects {
 }
 
 // Useful for local testing, with a testserver folder containing your testing server
-boolean local = false
+boolean local = true
 if (local) libsDirName = '../testserver/plugins'
 
 /*
